fixed contrast errors

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ footer ul {
 
 .h1index {
   background-color: #ffd900;
-  color: #ffffff;
+  color: #2b2b2b;
   font-size: 17pt;
   max-width: 300px;
   line-height: 54px;
@@ -164,7 +164,7 @@ footer ul {
   text-align: center;
   letter-spacing: 3px;
   margin: auto;
-  text-shadow: 2px 2px 5px #000000;
+  text-shadow: 2px 5px 5px #ffffff;
   margin-top: 150px;
   box-shadow: 0px 0px 5px 0px black;
 }
@@ -209,8 +209,8 @@ footer ul {
   margin: auto;
   text-align: center;
   font-size: 30px;
-  color: #b3ff00;
-  text-shadow: 2px 2px 5px #000000;
+  color: #ffffff;
+  text-shadow: 2px 2px 5px #b10000;
   margin-bottom: 20px;
 }
 
@@ -226,7 +226,7 @@ footer ul {
 
 .teachers {
   margin-top: 100px;
-  background-color: #4cc1f3;
+  background-color: #07475f;
   letter-spacing: 1px;
   line-height: 25px;
   box-shadow: 0px 0px 3px 0px #000000;
@@ -252,7 +252,7 @@ footer ul {
 
 .kids {
   margin-top: 100px;
-  background-color: #4cc1f3;
+  background-color: #07475f;
   letter-spacing: 1px;
   line-height: 25px;
   border: 2px solid #000000;
@@ -280,7 +280,7 @@ footer ul {
 
 .researchers {
   margin-top: 100px;
-  background-color: #4cc1f3;
+  background-color: #07475f;
   letter-spacing: 1px;
   line-height: 25px;
   box-shadow: 0px 0px 10px 0px #000000;
